[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pytest>=8.3.4"]

[dependency-groups]
dev = ["ruff>=0.8.3"]

[tool.uv.workspace]
members = ["*"]

# Exclude non-package directories
exclude = [
    "__pycache__",
    "*/__pycache__",
    "__pytest_cache__",
    "/*__pytest_cache__",
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E4",
    "E7",
    "E9",
    "F",
    # isort
    "I001",
    # Docstring
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    # Type hinting
    "PT008", # Unspecified argument type(s)
    "PT009", # Unspecified return type
    "PT010", # Unspecified variable type
    "PT011", # Unspecified attribute type
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
